created dogs service, controllers, html

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,6 +13,7 @@
 <body class="w3-theme-l5">
     <div class="w3-bar w3-theme-d5">
         <a ui-sref="home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Trainer</a>
+        <a ui-sref="dogs" class="w3-bar-item w3-button"> Dogs</a>
     </div>
 
     <ui-view></ui-view>
@@ -26,10 +27,13 @@
 
     <!-- controllers -->
     <script src="/ngApp/controllers/mainController.js"></script>
+    <script src="/ngApp/controllers/dogsController.js"></script>
+    <script src="/ngApp/controllers/dogDetailsController.js"></script>
     
     <!-- services -->
     <script src="/ngApp/services/productService.js"></script>
-
+    <script src="/ngApp/services/dogService.js"></script>
+    
     <script src="/ngApp/app.js"></script>
 
 </body>
