added book list

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -14,6 +14,7 @@
     <div class="w3-bar w3-theme-d5">
         <a ui-sref="home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Trainer</a>
         <a ui-sref="dogs" class="w3-bar-item w3-button"> Dogs</a>
+        <a ui-sref="books" class="w3-bar-item w3-button"><i class="fa fa-book" aria-hidden="true"></i> Books</a>
     </div>
 
     <ui-view></ui-view>
@@ -29,10 +30,13 @@
     <script src="/ngApp/controllers/mainController.js"></script>
     <script src="/ngApp/controllers/dogsController.js"></script>
     <script src="/ngApp/controllers/dogDetailsController.js"></script>
+    <script src="/ngApp/controllers/booksController.js"></script>
+    <script src="/ngApp/controllers/bookDetailsController.js"></script>
     
     <!-- services -->
     <script src="/ngApp/services/productService.js"></script>
     <script src="/ngApp/services/dogService.js"></script>
+    <script src="/ngApp/services/bookService.js"></script>
     
     <script src="/ngApp/app.js"></script>
 
