--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,8 +13,9 @@
 <body class="w3-theme-l5">
     <div class="w3-bar w3-theme-d5">
         <a ui-sref="home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Trainer</a>
-        <a ui-sref="dogs" class="w3-bar-item w3-button"> Dogs</a>
+        <a ui-sref="dogs" class="w3-bar-item w3-button"><i class="fa fa-paw" aria-hidden="true"></i> Dogs</a>
         <a ui-sref="books" class="w3-bar-item w3-button"><i class="fa fa-book" aria-hidden="true"></i> Books</a>
+        <a ui-sref="cats" class="w3-bar-item w3-button"><i class="fa fa-github-alt" aria-hidden="true"></i> Cats</a>
     </div>
 
     <ui-view></ui-view>
@@ -32,11 +33,14 @@
     <script src="/ngApp/controllers/dogDetailsController.js"></script>
     <script src="/ngApp/controllers/booksController.js"></script>
     <script src="/ngApp/controllers/bookDetailsController.js"></script>
+    <script src="/ngApp/controllers/catsController.js"></script>
+    <script src="/ngApp/controllers/catDetailsController.js"></script>
     
     <!-- services -->
     <script src="/ngApp/services/productService.js"></script>
     <script src="/ngApp/services/dogService.js"></script>
     <script src="/ngApp/services/bookService.js"></script>
+    <script src="/ngApp/services/catService.js"></script>
     
     <script src="/ngApp/app.js"></script>
 
