--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -18,6 +18,7 @@
         <a ui-sref="cats" class="w3-bar-item w3-button"><i class="fa fa-github-alt" aria-hidden="true"></i> Cats</a>
         <a ui-sref="computers" class="w3-bar-item w3-button"><i class="fa fa-desktop" aria-hidden="true"></i> Computers</a>
         <a ui-sref="customers" class="w3-bar-item w3-button"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Customers</a>
+        <a ui-sref="products" class="w3-bar-item w3-button">Products</a>
         
     </div>
 
@@ -42,6 +43,8 @@
     <script src="/ngApp/controllers/computerDetailsController.js"></script>
     <script src="/ngApp/controllers/customerController.js"></script>
     <script src="/ngApp/controllers/customerDetailsController.js"></script>
+    <script src="/ngApp/controllers/productController.js"></script>
+    <script src="/ngApp/controllers/productDetailsController.js"></script>
     
     <!-- services -->
     <script src="/ngApp/services/productService.js"></script>
