--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,6 +13,7 @@
 <body class="w3-theme-l5">
     <div class="w3-bar w3-theme-d5">
         <a ui-sref="home" class="w3-bar-item w3-button"><i class="fa fa-home"></i> Trainer</a>
+        <a ui-sref="books" class="w3-bar-item w3-button"><i class="fa fa-book"></i> Books</a>
     </div>
 
     <ui-view></ui-view>
@@ -26,9 +27,12 @@
 
     <!-- controllers -->
     <script src="/ngApp/controllers/mainController.js"></script>
+    <script src="/ngApp/controllers/booksController.js"></script>
+    <script src="/ngApp/controllers/bookDetailsController.js"></script>
     
     <!-- services -->
     <script src="/ngApp/services/productService.js"></script>
+    <script src="/ngApp/services/bookService.js"></script>
 
     <script src="/ngApp/app.js"></script>
 
